# companion

./: .gitignore  .pre-commit-config.yaml  0.NOTE.md  CLI_HIERARCHY_PROPOSAL.md  README.md  fetch_result.json  pyproject.toml  raw.json  refactor_issue_draft.md
.agent/workflows/: cleanup-branches.md
.github/ISSUE_TEMPLATE/: wrong_summary.md  wrong_summary.yml
.github/workflows/: endpoint.readit.enqueue.yml  pull.on_default_branch.yml
server/: pyproject.toml  sample.py
server/src/endpoint/readit/: core.py  data.py
server/src/endpoint/readit/app/: send_to_personal.py
src/endpoint/readit/: core.py  github.py
src/endpoint/readit/app/: add_summary_to_eval_queue.py  ensure_url_not_in_eval_queue.py  fetch.py  send.py  send_to_personal.py  send_to_queue_v2.py  summarize_other.py
tests/: test_send_to_personal.py
tests/endpoint/readit/: test_core.py
tests/endpoint/readit/app/: test_summarize_other.py
